# anvil

./: .gitignore  INSTALL.md  LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
anvil/: __init__.py  __main__.py  cli.py
examples/: anvil.project.json  anvil.variants.quick.json  anvil_project.json  anvil_variants_full.json
src/: __init__.py  __main__.py  anvil.py
