[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anvil-build"
version = "0.1.0"
description = "Build-matrix tool for C/C++ projects — compile with multiple compiler/flag variants."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Michele Abruzzese", email = "oniricha04@gmail.com" }
]
keywords = ["build", "c++", "cmake", "variants", "matrix-build", "compiler"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Build Tools",
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/michezio/anvil"
Documentation = "https://github.com/michezio/anvil#readme"
Repository = "https://github.com/michezio/anvil.git"
Issues = "https://github.com/michezio/anvil/issues"

[project.scripts]
anvil = "src.anvil:main"

[tool.setuptools]
packages = ["src"]
